--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+admin/static/*
+!admin/static/.gitkeep
+admin/logs/
+# admin/templates/
+
+### Python template
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -157,4 +163,21 @@ cython_debug/
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+.idea/
+
+# Media and Static Django
+/media/*.jpg
+/staticfiles
+
+# Logs Django
+/logs
+
+.DS_Store
+.AppleDouble
+.LSOverride
+
+*.sublime-project
+*.sublime-workspace
+
+.vscode/
+*.code-workspace
