--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -12,6 +12,9 @@ server {
     }
 
     location / {
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Host $server_name;
+        proxy_set_header X-Real-IP $remote_addr;
         proxy_pass http://web:8000;
     }
 }
